--- a/bio/sources/biopax/.classpath
+++ b/bio/sources/biopax/.classpath
@@ -15,8 +15,8 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/bio-testall-dbmodel"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/bio-postprocess-main"/>
 	<classpathentry kind="lib" path="main/resources"/>
-	<classpathentry kind="lib" path="main/lib/slf4j-api-1.5.6.jar"/>
-	<classpathentry kind="lib" path="main/lib/slf4j-log4j12-1.5.6.jar"/>
-	<classpathentry kind="lib" path="main/lib/paxtools-4.1.6.jar"/>
-	<classpathentry kind="output" path="bin"/><classpathentry combineaccessrules="false" kind="src" path="/intermine-model-test"/><classpathentry combineaccessrules="false" kind="src" path="/intermine-model-main"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/intermine-model-test"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/intermine-model-main"/>
+	<classpathentry kind="lib" path="main/lib/paxtools-4.3.0.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
